ocaml/testsuite/tests/comprehensions/iarray_comprehensions_require_immutable_arrays.compilers.reference
File "iarray_comprehensions_require_immutable_arrays.ml", line 9, characters 0-21:
9 | [:x for x = 1 to 10:];;
    ^^^^^^^^^^^^^^^^^^^^^
Error: The extension "immutable_arrays" is disabled and cannot be used
